--- a/web/package.json
+++ b/web/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "leaflet": "^1.7.1",
     "vue": "^2.6.11",
     "vue-template-compiler": "^2.6.11",
     "vue-youtube": "^1.4.0",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
