--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,3 +1,18 @@
+spring:
+  datasource:
+    url: jdbc:h2:mem:game
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+#Access local database console from http://localhost:80/h2-console
+server:
+  port: 80
+
 game:
   playlists:
     - World
@@ -7,8 +22,19 @@ game:
     - Europe
     - Asia
     - Australia
+    - Cities
   videos:
     - url: testUrl
       start-time: 40
+      latitude: 90
+      longitude: 90
+      playlists:
+        - Cities
+        - World
     - url: testUrl2
       start-time: 50
+      latitude: 90
+      longitude: 90
+      playlists:
+        - Cities
+        - World
