--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       enabled: true
 #Access local database console from http://localhost:80/h2-console
 server:
-  port: 80
+  port: 8081
 
 game:
   playlists:
@@ -38,3 +38,10 @@ game:
       playlists:
         - Cities
         - World
+    - url: testUrl3
+      start-time: 50
+      latitude: 90
+      longitude: 90
+      playlists:
+        - World
+        - Europe
