--- a/web/package.json
+++ b/web/package.json
@@ -8,16 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@stomp/stompjs": "^6.1.2",
     "axios": "^0.24.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
+    "sockjs": "^0.3.24",
+    "stompjs": "^2.3.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11",
     "vue-youtube": "^1.4.0",
     "vue2-leaflet": "^2.7.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
