--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "qs": "^6.10.2",
     "sockjs": "^0.3.24",
     "stompjs": "^2.3.3",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11",
