--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "stompjs": "^2.3.3",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-plotly": "^1.1.0",
     "vue-router": "^3.5.3",
     "vue-template-compiler": "^2.6.11",
     "vue-youtube": "^1.4.0",
