Added environment based urls, ws proxying, and remove game api

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -16,7 +16,7 @@ http {
   keepalive_timeout  65;
   server {
     listen       80;
-    server_name  test;
+    server_name  explorerlewis.com;
     index        index.html;
     location / {
       root   /app;
@@ -26,6 +26,16 @@ http {
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
+    }
+    location /lobby {
+      proxy_pass http://explorerlewis.com:8081/lobby;
+    }
+    location /scores {
+      proxy_pass http://explorerlewis.com:8081/scores;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_set_header Host $host;
     }
   }
 }
