--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -15,8 +15,10 @@ http {
   sendfile        on;
   keepalive_timeout  65;
   server {
-    listen       80;
-    server_name  explorerlewis.com;
+    listen       443 ssl;
+    ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+    ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+    server_name  explorerlewis.com www.explorerlewis.com;
     index        index.html;
     location / {
       root   /app;
@@ -37,5 +39,10 @@ http {
       proxy_set_header Connection "Upgrade";
       proxy_set_header Host $host;
     }
+  }
+  server{
+    listen      80;
+    server_name   _;
+    return 301 https://explorerlewis.com$request_uri;
   }
 }
